# assertpy-stubs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
assertpy-stubs/: assertpy.pyi  collection.pyi
